# ktp-thinklight

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  kcm_ktptextui_message_filter_thinklight.desktop  ktptextui_message_filter_thinklight.desktop  thinklight-config.cpp  thinklight-config.h  thinklight-config.ui  thinklight-filter.cpp  thinklight-filter.h  thinklight.kcfg  thinklightconfig.kcfgc
